# agent-todo-list-example

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
agent/: loop.py  openai_client.py  swagger_loader.py  tool_executor.py  tool_schema_converter.py
api_gateway/: main.py
examples/: example_chat.json
frontend/src/: App.css  App.tsx  api.ts
tests/: test_agent.py  test_todo_api.py
todo_server/: crud.py  database.py  main.py  models.py  schemas.py  swagger.json
